# Tool_Maintenance

./: .gitignore  README.md
backend/: README.md  pyproject.toml  requirements.txt
backend/app/: config.py  crud.py  database.py  dependencies.py  main.py  models.py  schemas.py  security.py
backend/app/routers/: __init__.py  actions.py  auth.py  failures.py  maintenance.py  shot_counters.py  tools.py
backend/app/static/: __init__.py  app.js  index.html  styles.css
docs/: architecture.md  best_practices.md  data_model.md
