[project]
name = "tool-maintenance-backend"
version = "0.1.0"
description = "FastAPI backend for the Tool Maintenance Management System"
authors = [{name = "Tool Maintenance Team"}]
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0.25",
    "aiosqlite>=0.19.0",
    "pydantic[email]>=2.6",
    "pydantic-settings>=2.2",
    "pyjwt>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"
